--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 data/
-.DS_Store
-.ipynb_checkoints
+.ipynb_checkoints/
+.DS_Store 
+*/.DS_Store
+Day_001_example_of_metrics.ipynb 
+Day_002_first_EDA.ipynb
