--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ data/
 */.DS_Store
 Day_001_example_of_metrics.ipynb 
 Day_002_first_EDA.ipynb
+Day_003-1_build_dataframe_from_scratch.ipynb
+Day_003-2_read_and_write_files.ipynb
+Day_003-3_read_and_write_files.ipynb
